--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
+    "styled-components": "^6.1.19",
     "uuid": "^11.1.0",
     "zod": "^3.23.8"
   },
