--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-rate-limit": "^7.5.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.1",
     "multer": "^2.0.1",
     "styled-components": "^6.1.19",
     "uuid": "^11.1.0",
