--- a/python_backend/requirements.txt
+++ b/python_backend/requirements.txt
@@ -3,7 +3,11 @@ uvicorn[standard]==0.24.0
 motor==3.3.2
 python-dotenv==1.0.0
 python-jose[cryptography]==3.3.0
-bcrypt==4.1.2
+passlib[bcrypt]==1.7.4
 pydantic==2.5.0
-pydantic[email]==2.5.0
-python-multipart==0.0.6 
+pydantic-settings==2.1.0
+python-multipart==0.0.6
+python-telegram-bot==20.7
+aiofiles==23.2.1
+Pillow==10.1.0
+requests==2.31.0 
