--- a/package.json
+++ b/package.json
@@ -11,7 +11,24 @@
     "typecheck": "echo 'TypeScript checking disabled for JavaScript project'"
   },
   "dependencies": {
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
+    "@tanstack/react-query": "^5.56.2",
+    "framer-motion": "^12.23.0",
+    "lucide-react": "^0.462.0",
+    "next-themes": "^0.3.0",
+    "sonner": "^1.5.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.2",
+    "class-variance-authority": "^0.7.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.2"
   },
   "devDependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -46,34 +63,23 @@
     "@react-three/fiber": "^8.18.0",
     "@swc/core": "^1.11.24",
     "@tailwindcss/typography": "^0.5.15",
-    "@tanstack/react-query": "^5.56.2",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.176.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.21",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
-    "framer-motion": "^12.23.0",
     "globals": "^15.9.0",
     "input-otp": "^1.2.4",
-    "lucide-react": "^0.462.0",
-    "next-themes": "^0.3.0",
     "postcss": "^8.5.6",
     "prettier": "^3.5.3",
-    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
     "react-hook-form": "^7.59.0",
     "react-resizable-panels": "^2.1.3",
-    "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.11",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
